--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+/* background-image: linear-gradient(180deg,#ffffff 19%,#b3afff 100%)!important; */
+
 body {
   background-color: rgb(244, 244, 244);
+}
+
+.wrapper {
+  max-width: 1200px !important;
+  margin: 0 auto;
+  
 }
 
 .blue-glassmorphism {
