--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 }
 
 .wrapper {
-  max-width: 1200px !important;
+  max-width: 1100px !important;
   margin: 0 auto;
   
 }
@@ -25,4 +25,10 @@ body {
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(7px);
   border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.responsive-section {
+  width: 100%;
+  height: 700px;
+  background-image: url('https://www.elegantthemes.com/layouts/wp-content/uploads/2018/11/software-22.png');
 }
