--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,13 @@
 
 body {
   background-color: #f4f4f4;
+  scroll-behavior: smooth;
 }
 
 .wrapper {
   max-width: 1100px !important;
   margin: 0 auto;
+
   
 }
 
@@ -31,4 +33,10 @@ body {
   width: 100%;
   height: 700px;
   background-image: url('https://www.elegantthemes.com/layouts/wp-content/uploads/2018/11/software-22.png');
+  /* background-position: top right; */
+}
+
+footer.footer {
+  background-image: url('https://www.elegantthemes.com/layouts/wp-content/uploads/2018/11/software-10.png');
+  /* height: 600px; */
 }
