--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,8 @@ body {
   
 }
 
-.gradient-bg {
-  background-image: linear-gradient(180deg,#f4f4f4 19%,#b3afff 100%)!important;
+.gradient-bg{
+  background-image: linear-gradient(180deg,#f4f4f4 19%,#d2d0ff 100%)!important;
 }
 
 .blue-glassmorphism {
