--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ body {
   background-image: linear-gradient(180deg,#f4f4f4 19%,#d2d0ff 100%)!important;
 }
 
+nav {
+  z-index: 2;
+}
+
 .blue-glassmorphism {
   background: rgb(39, 51, 89, 0.4);
   border-radius: 16px;
@@ -82,7 +86,7 @@ max-width: 1100px;
   /* display: none; */
   position: absolute;
   left: 16px;
-  z-index: 100;
+  z-index: 1;
  }
 
  .testimonial {
